CSS Verbesserungen und Vereinheitlichung für Projekte, Blogs

--- a/mitmachen/index.html
+++ b/mitmachen/index.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: Code for Münster - Blog
-page_class: blog
+title: Code for Münster - Mitmachen
 ---
 <div class="wrapper">
+  <h2><a href="{{ "/blog/index.html" | prepend: site.baseurl }}">Geschichten aus Münster</a></h2>
   <ul class="posts">
     {% for post in site.posts %}
     <li>
